--- a/home/src/del.css
+++ b/home/src/del.css
@@ -77,16 +77,16 @@ input{
 
 @keyframes btn {
     0%{
-        padding: 10px;
+        /* padding: 10px; */
         background-color: blue;
     }
     50%{
-        padding: 30px;
+        /* padding: 30px; */
         background-color: red;
-        border-radius: 25px;
+        /* border-radius: 25px; */
     }
     100%{
-        padding: 10px;
+        /* padding: 10px; */
         background-color: blue;
     }
 }
