--- a/home/src/Support.css
+++ b/home/src/Support.css
@@ -1,5 +1,5 @@
 #head{
-    background-image: url("./images/backgroundGrey.jpg");
+    background-image: url("./imgs/bg.jpg");
    background-repeat:"no-repeat";
     background-size:"fill";
     background-position:'center';
